modificaciones en el listado de gastos

--- a/src/views/modificar.ejs
+++ b/src/views/modificar.ejs
@@ -14,41 +14,31 @@
 			  <a href="contacto.html">Contactenos</a>
 			  <a href="listado.html">Listado</a>
 			</nav>
-			  <!-- <img class="carrito" src="./img/img-nuevas/carrito.png" alt="" /> -->
+			  
 		
 		  </header>
 
 		  <main>
 				<h2>Modificar el Item</h2>
-				<div id="producto-modificar">
-					<form action="/modificar?_metodo=PUT" method="POST" class="producto-form">
-						<label for="nombre">Nombre:</label>
-						<input type="text" name="nombre" value="<%= registro.nombre %>">
+				<div id="gastos-modificar">
+					<form action="/modificar?_metodo=PUT" method="POST" class="gastos-form">
+						<label for="importe">Importe:</label>
+						<input type="number" name="importe" value="<%= gastos.monto %>">
 						<label for="descripcion">Descripcion:</label>
-						<input type="text" name="descripcion" value="<%= registro.descripcion %>">
-						<label for="precio">Precio:</label>
-						<input type="number" name="precio" value="<%= registro.precio %>">
-						<label for="id_tipoProducto">Tipo de Producto:</label>
-						<label for="id_tipoProducto">Tipo de Producto:</label>
-						<select name="id_tipoProducto" id="selecttipoProductoForm">
-							<option value="">Seleccione un tipo de producto</option>
-							<% tiposProducto.forEach(tipo => { %>
-								<option value="<%= tipo.id %>" <%= registro.id_tipoProducto === tipo.id ? 'selected' : '' %>><%= tipo.nombre %></option>
-							<% }) %>
-						</select>
-		
-						<label for="alias">Marca:</label>
-						<select name="alias" id="proveedoresForm">
-							<option value="">Seleccione una marca</option>
-							<% proveedores.forEach(proveedor => { %>
-								<option value="<%= proveedor.id %>" <%= registro.alias === proveedor.id ? 'selected' : '' %>><%= proveedor.alias %></option>
-							<% }) %>
-						</select>
+						<input type="text" name="descripcion" value="<%= gastos.concepto %>">
+						<label for="anio">Año:</label>
+						<input type="number" name="anio" value="<%= gastos.anio %>">
+						<label for="mes">Mes:</label>
+						<input type="number" name="mes" value="<%= gastos.mes %>">
+						<label for="fecha_vencimiento">Fecha Vencimiento:</label>
+						<input type="number" name="fecha_vencimiento" value="<%= gastos.fecha_vencimiento %>">
+
+
 						<input type="hidden" name="idMod" value="<%= registro.id %>"><br>
 						<input type="submit" value="Actualizar" class="btn">
 					</form>
 					<div id="btn-cancelar">
-						<a href="/listado.html" class="btn">Cancelar</a>
+						<a href="/listado_gastos.html" class="btn">Cancelar</a>
 					</div>
 				</div>
 				
