--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -116,6 +116,11 @@ section {
   margin: auto;
 }
 
+.filtros {
+  width: 100%;
+  margin-bottom: 24px;
+  }
+
 .tarjeta {
   display: flex;
   flex-wrap: wrap;
@@ -193,7 +198,6 @@ section {
 /*........fin card......*/
 
 
-
 .flotante {
   display: scroll;
   position: fixed;
@@ -219,8 +223,7 @@ footer {
 
 
 
-/*.........CONTACTENOS...........*/
-
+/*.........formulario gastos...........*/
 
 
 h2 {
@@ -233,22 +236,7 @@ h2 {
   margin-bottom: 32px;
 }
 
-#img_contacto {
-  display: inline-block;
-  position: relative;
-  width: 400px;
-  height: 600px;
-  overflow: hidden;
-  /*border-radius: 50%;*/
-}
-
-#img_contacto img {
-  width: auto;
-  height: 100%;
-  margin-left: -2px;
-}
-
-#contacto {
+#agregar_gasto {
   width: 1000px;
   padding: 16px;
   margin: auto;
@@ -258,6 +246,13 @@ h2 {
   display: flex;
   justify-content: space-between;
 }
+
+.formulario{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
 
 form label {
   width: 72px;
@@ -269,9 +264,8 @@ form label {
 }
 
 form input[type="text"],
-form input[type="email"],
-form input[type="number"],
-form input[type="tel"] {
+form input[type="date"],
+form input[type="number"] {
   width: 450px;
   padding: 3px 10px;
   border: 1px solid #f6f6f6;
@@ -301,37 +295,111 @@ form input[type="submit"]:hover {
   transform: scale(1.2);
 }
 
-textarea {
+
+/*.........FIN formulario gastos...........*/
+
+#listadoConceptos {
+  width: 1000px;
+  padding: 16px;
+  margin: auto;
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+  border-radius: 15px;
+
+}
+
+.formulario_edicion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+
+
+.formulario_edicion #formularioEdicion {
+  width: 1000px;
+  padding: 16px;
+  margin: auto;
+  border: 1px solid lightgray;
+  box-shadow: 2px 2px 8px 4px #d3d3d3d1;
+  border-radius: 15px;
+
+  margin-top: 16px;
+}
+
+.formulario_edicion #formularioEdicion h2 {
+  max-width: 1200px;
+  margin: auto;
+  margin-bottom: 10px;
+  width: 10;
+  color: #ff1919;
+  font-size: 24px;
+}
+
+
+
+.formulario_edicion #formularioEdicion label {
+  width: 72px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: auto;
+}
+
+.formulario_edicion #formularioEdicion input[type="text"],
+.formulario_edicion #formularioEdicion input[type="date"],
+.formulario_edicion #formularioEdicion input[type="number"] {
   width: 450px;
-  height: 100px;
+  padding: 3px 10px;
   border: 1px solid #f6f6f6;
   border-radius: 3px;
   background-color: #f6f6f6;
   margin: 8px 0;
-  /*resize: vertical | horizontal | none | both*/
-  resize: none;
-  display: block;
+  display: inline-block;
 }
 
-.forma-contacto, .fecha_hora {
-  width: 450px;
-  display: flex;
-  margin-bottom: 10px;
-  justify-content: space-between;
+.formulario_edicion #formularioEdicion input[type="submit"] {
+  width: 50%;
+  margin-top: 32px;
+  border: none;
+  border-radius: 10px;
+  background-color: #d1b3c4;
+  font-family: 'introbold';
+  color: white;
+  font-weight: 500;
+  font-size: 25px;
+  width: 150px;
+  height: 40px;
 }
 
+.formulario_edicion #formularioEdicion input[type="submit"]:hover {
+  border: none;
+  background-color: #b392ac;
+  transform: scale(1.2);
+}
 
-/*.........FIN CONTACTENOS...........*/
+/*
+#formularioEdicion button {
+  margin-top: 16px;
+  width: 200px;
+  height: 50px;
+  border: none;
+}
+*/
+
+
 
 /*.........INICIO LISTADO...........*/
 
 /* muestra el listado de productos */
-#listado {
+#listaGastos {
   max-height: 400px;
   /* Ajusta esta altura según tus necesidades */
   overflow-y: auto;
   border: 1px solid #ccc;
   padding: 10px;
+  margin-top: 20px;
 }
 
 .list-header, .list-item {
@@ -525,7 +593,7 @@ textarea {
 }
 /*.........Inicio Pagina Modificar...........*/
 
-#producto-modificar {
+#gasto-modificar {
   width: 1000px;
   padding: 16px;
   margin: auto;
@@ -534,7 +602,7 @@ textarea {
   border-radius: 15px;
 }
 
-#producto-modificar form label {
+#gasto-modificar form label {
   width: 72px;
   font-weight: bold;
   display: flex;
@@ -543,7 +611,7 @@ textarea {
   width: auto;
 }
 
-#producto-modificar .btn {
+#gasto-modificar .btn {
   width: 200px;
   height: 50px;
   border: none;
@@ -562,18 +630,18 @@ textarea {
   /* Para los enlaces */
 }
 
-#producto-modificar .btn:hover {
+#gasto-modificar .btn:hover {
   background-color: #d1b3c4;
   transform: scale(1.2);
 }
 
 /* Estilos específicos para los enlaces */
-#producto-modificar a {
+#gasto-modificar a {
   text-decoration: none;
   display: inline-block;
 }
 
-#producto-modificar a:hover {
+#gasto-modificar a:hover {
   background-color: #b392ac;
 }
 
