modificaciones en estilos formularios y comienzo de modificar conceptos y gastos

--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -221,19 +221,33 @@ h2 {
   box-shadow: 2px 2px 8px 4px #d3d3d3d1;
   border-radius: 15px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column; /* Cambia la dirección a columna */
+  align-items: center; /* Centra los elementos horizontalmente */
+  text-align: center;
 }
 
-
-
+h3 {
+  align-self: flex-start; /* Alinea el título a la izquierda */
+  margin-left: 10px; /* Añade un margen para separarlo del borde izquierdo */
+  text-align: left;
+}
 
 .orden {
-  display: flex;
-  justify-content: center;
-  }
+  width: 1000px;
+  padding: 16px;
+}
 
-.agregar .orden h3 {
-  margin-bottom: 16px;
+.formulario {
+  width: 500px;
+  padding: 16px;
+  margin: auto;
+  text-align: left;
+}
+
+form {
+  width: 100%; /* Opcional: ajusta el ancho del formulario si es necesario */
+  max-width: 500px; /* Limita el ancho máximo del formulario */
+  margin-top: 10px; /* Añade un margen superior para separar el formulario del título */
 }
 
 form label {
@@ -267,7 +281,7 @@ form input[type="submit"] {
   color: white;
   font-weight: 500;
   font-size: 25px;
-  width: 150px;
+  width: 300px;
   height: 40px;
 }
 
@@ -275,6 +289,16 @@ form input[type="submit"]:hover {
   border: none;
   background-color: #b392ac;
   transform: scale(1.2);
+}
+
+form select {
+  width: 450px;
+  padding: 3px 10px;
+  border: 1px solid #f6f6f6;
+  border-radius: 3px;
+  background-color: #f6f6f6;
+  margin: 8px 0;
+  display: inline-block;
 }
 
 /*.........FIN formulario  Agregar...........*/
