--- a/src/views/modificar_gasto.ejs
+++ b/src/views/modificar_gasto.ejs
@@ -19,7 +19,7 @@
 		  </header>
 
 		  <main>
-				<h2>Modificar el Item</h2>
+				<h2>Modificar Gasto</h2>
 				<div id="gastos-modificar">
 					<form action="/modificar?_metodo=PUT" method="POST" class="gastos-form">
 						<label for="importe">Importe:</label>
