--- a/src/views/modificar_concepto.ejs
+++ b/src/views/modificar_concepto.ejs
@@ -49,7 +49,7 @@
 							<option value="1" <%= registro.requiere_vencimiento === 1 ? 'selected' : '' %>>Sí</option>
 						</select><br>
 				
-						<button type="submit">Actualizar</button>
+						<button type="submit" class="btn">Actualizar</button>
 					</form>
 					<div id="btn-cancelar">
 						<a href="/conceptos.html" class="btn">Cancelar</a>
