--- a/src/views/modificar_gasto.ejs
+++ b/src/views/modificar_gasto.ejs
@@ -64,7 +64,7 @@
                         <option value="1" <%= registro.pagado === 1 ? 'selected' : '' %>>Sí</option>
                     </select><br>
 
-                    <button type="submit">Actualizar</button>
+                    <button type="submit" class="btn">Actualizar</button>
                 </form>
                 <div id="btn-cancelar">
                     <a href="/listado_gastos.html" class="btn">Cancelar</a>
