--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -299,7 +299,8 @@ form label {
 
 form input[type="text"],
 form input[type="date"],
-form input[type="number"] {
+form input[type="number"],
+form input[type="password"] {
   width: 450px;
   padding: 3px 10px;
   border: 1px solid #f6f6f6;
